<resources>
    <string name="app_name">My Pocket Bride</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale1">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_living">LivingActivity</string>


    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>

    <!-- TextView Strings-->
    <string name="mail">Your mail, will be your login:</string>
    <string name="pasword">Password:</string>
    <string name="pswverif">Password verification:</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="yourName">How will your companion name you?</string>
    <string name="companionName">Your companion name:</string>
    <string name="addHome">Home address:</string>
    <string name="addWork">Work address:</string>

    <!-- Button Strings-->
    <string name="signIn">Sign In</string>
    <string name="reinitiate">Reinitiate</string>


    <!-- Hint Strings-->
    <string name="hint_mail">exemple@gmail.com</string>
    <string name="hint_password">Pasword</string>
    <string name="hint_pswverif">Password Verification</string>
    <string name="hint_dob">01/01/1901</string>
    <string name="hint_yourName">Pumpkin</string>
    <string name="hint_companionName">Hatsune</string>
    <string name="hint_address">ex: Rue Vocaloide 42, 1000 Bruxelles</string>

    <!-- Empty Strings-->
    <string name="bad_pwd">Error in passwords</string>
    <string name="empty_pwd">Password empty</string>
    <string name="empty_mail">Mail empty</string>
    <string name="empty_nickname">Nickname empty</string>
    <string name="empty_companion">Companion empty</string>
    <string name="empty_date">Date of Birth empty</string>
    <string name="empty_home">Home address empty</string>
    <string name="empty_work">Work address empty</string>
    <string name="no_sex">Please choose a sex</string>
    <string name="exceptionAddress">Address not found</string>

    <!-- Toast  Strings-->
    <string name="success">User successfully created</string>

</resources>
