<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.formation.appli.mypocketbride.SignIn"
    android:background="@drawable/signinscreen"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/layout_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            //region formulaire
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_mail"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_mail"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pasword"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_psw1"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pswverif"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_psw2"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:inputType="textPassword"
                android:hint="@string/hint_pswverif"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companionName"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_companionName"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:hint="@string/hint_companionName"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourName"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_yourName"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:hint="@string/hint_yourName"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateOfBirth"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:inputType="date"
                android:hint="@string/hint_dob"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addHome"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_addHome"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:inputType="textPostalAddress"
                android:hint="@string/hint_address"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addWork"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_sign_addWork"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:inputType="textPostalAddress"
                android:hint="@string/hint_address"
                android:textSize="15sp"/>
            //end region
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sex:"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textColor="@color/white"
                    />
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textColor="@color/white"
                    />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btn_signIn_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="0.5"
            android:text="@string/signIn"/>
        <Button
            android:id="@+id/btn_signIn_reinitiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reinitiate"
            android:layout_weight="0.5"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>
