<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/loginscreen"
    tools:context="com.formation.appli.mypocketbride.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/layout_button">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_logIn_mail"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/prompt_email"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/et_logIn_password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:hint="@string/prompt_password"
                android:textAlignment="center"/>






        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_logIn_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="0.5"
                android:text="@string/action_sign_in"
                 />
            <Button
                android:id="@+id/btn_logIn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="0.5"
                android:text="@string/action_register"/>
    </LinearLayout>
</RelativeLayout>
